2023-10-26T08:12:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6651286828 # 2019
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
* notice: last 14d: unq all: 57 115
* notice: prev accum: outdated-unq outdated-all / unq all: 1806 5544 / 1889 5665
* notice: next accum: outdated-unq outdated-all / unq all: 1806 5544 / 1890 5666
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -7 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-12 2023-10-26]

2023-10-26T00:42:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6647909209 # 2018
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
* notice: last 14d: unq all: 59 121
* notice: prev accum: outdated-unq outdated-all / unq all: 1806 5544 / 1882 5656
* notice: next accum: outdated-unq outdated-all / unq all: 1806 5544 / 1889 5665
* notice: prev exec diff / last date diff / accum: unq all: +7 +9 -0 -0 / +8 +10 -0 -0 / 8 10
* notice: removed / changed dates: [] / [2023-10-25]

2023-10-25T16:12:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6643155694 # 2017
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
* notice: last 14d: unq all: 53 112
* notice: prev accum: outdated-unq outdated-all / unq all: 1800 5536 / 1882 5656
* notice: next accum: outdated-unq outdated-all / unq all: 1806 5544 / 1882 5656
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-11] / []

2023-10-25T08:12:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6637574350 # 2016