@@ -1,3 +1,12 @@
+2023-10-26T16:11:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6656844467 # 2020
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
+* notice: last 14d: unq all: 57 115
+* notice: prev accum: outdated-unq outdated-all / unq all: 1806 5544 / 1890 5666
+* notice: next accum: outdated-unq outdated-all / unq all: 1809 5552 / 1890 5667
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-10-12] / [2023-10-26]
+
 2023-10-26T08:12:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6651286828 # 2019
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
